	option to command.
	(gdb-threads-mode-map): Select thread with SPC
	(gdb-thread-list-handler-custom): Mark current thread with overlay
	arrow. Synchronize GDB thread and Emacs thread.
	(gdb-select-thread): New command which selects current thread.
	(gdb-invalidate-frames, gdb-invalidate-locals)
	(gdb-invalidate-registers): Use --thread option.

	* progmodes/gdb-mi.el (gdb-breakpoints-buffer-name)
	(gdb-locals-buffer-name, gdb-registers-buffer-name)
	(gdb-memory-buffer-name, gdb-stack-buffer-name): Do not switch
	to (gud-comint-buffer) in *-buffer-name functions
	because (gdb-get-target-string) already does that.
	(gdb-locals-handler-custom, gdb-registers-handler-custom)
	(gdb-changed-registers-handler): Rewritten without regexps.

2009-08-04  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (top): Make check for tramp-gvfs loading more
	robust.
	(tramp-handle-insert-file-contents): `unwind-protect' must be
	inside `with-parsed-tramp-file-name'.

	* net/tramp-gvfs.el (top): Remove superfluous message when loading
	fails.

2009-08-03  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gud.el (jdb): Set gud-jdb-classpath-string to current
	directory if CLASSPATH is not set.

2009-08-03  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-rfn-eshadow-update-overlay-regexp) New
	defconst.
	(tramp-rfn-eshadow-update-overlay): Use it.  (Bug#4004)

2009-08-02  Kevin Ryde  <user42@zip.com.au>

	* net/newst-backend.el (newsticker--raw-url-list-defaults): Update
	freshmeat link.  Delete newsforge.com as it seems gone.

2009-08-02  Chong Yidong  <cyd@stupidchicken.com>

	* select.el (x-set-selection): Doc fix (Bug#4021).

	* w32-fns.el (x-set-selection): Doc fix (Bug#4021).

	* help-fns.el (describe-variable): Treat list return values from
	dir-locals-find-file properly (Bug#4005).

2009-08-02  Julian Scheid <julians37@googlemail.com>  (tiny change)

	* net/tramp.el (tramp-debug-message): Print also microseconds.
